--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -89,15 +89,6 @@ resources:
     secret_access_key: ((aws_secret_access_key))
     region_name: us-west-2
 
-- name: test-concourse-vars
-  type: s3
-  source:
-    bucket: infra-concourse-secrets
-    versioned_file: test-concourse-vars.yml
-    access_key_id: ((aws_access_key_id))
-    secret_access_key: ((aws_secret_access_key))
-    region_name: us-west-2
-
 - name: ubuntu-xenial-stemcell-gcp
   type: bosh-io-stemcell
   source:
@@ -1296,7 +1287,6 @@ jobs:
       passed: [bbl-downstream-docker-image]
       trigger: true
     - get: ubuntu-xenial-stemcell-azure
-    - get: test-concourse-vars
   - task: bbl-leftovers
     file: ci/scripts/bosh-bootloader/leftovers/task.yml
     image: cf-deployment-concourse-tasks-bbl-dev
@@ -1354,6 +1344,12 @@ jobs:
       BBL_STATE_DIR: bbl-azure-concourse
     input_mapping:
       bbl-states: updated-env-repo
+  - task: get-concourse-test-vars
+    file: ci/scripts/bosh-bootloader/get-concourse-test-vars/task.yml
+    params:
+      BBL_STATE_DIR: bbl-azure-concourse
+    input_mapping:
+      bbl-states: updated-env-repo
   - put: concourse-bosh-deployment
     params:
       source_file: source-file/bosh-source.json
@@ -1361,13 +1357,13 @@ jobs:
       stemcells: [ ubuntu-xenial-stemcell-azure/stemcell.tgz ]
       vars_files:
         - concourse-deployment/versions.yml
-        - concourse-secrets/concourse-secrets.yml
-        - test-concourse-vars/test-concourse-vars.yml
+        - concourse-test-vars/vars.yml
       ops_files:
         - concourse-deployment/cluster/operations/privileged-https.yml
         - concourse-deployment/cluster/operations/privileged-http.yml
         - concourse-deployment/cluster/operations/basic-auth.yml
         - concourse-deployment/cluster/operations/tls.yml
+        - concourse-deployment/cluster/operations/tls-vars.yml
         - concourse-deployment/cluster/operations/web-network-extension.yml
   - task: curl-concourse
     image: cf-deployment-concourse-tasks-bbl-dev
@@ -1383,7 +1379,7 @@ jobs:
         path: bash
         args:
           - "-c"
-          - "curl -k https://$(bbl lbs --state-dir bbl-state/${BBL_STATE_DIR} | cut -d '(' -f 2 | tr -d ')') | grep '<title>Concourse</title>'"
+          - "curl -k https://$(bbl lbs --state-dir bbl-state/${BBL_STATE_DIR} | awk -F': ' '{print $2}') | grep '<title>Concourse</title>'"
     ensure:
       do:
       - put: concourse-bosh-deployment
@@ -1428,7 +1424,6 @@ jobs:
       passed: [build-bbl-state-docker]
       trigger: true
     - get: concourse-secrets
-    - get: test-concourse-vars
   - do:
     - put: test-bbl-state
       params:
@@ -1446,6 +1441,12 @@ jobs:
         command: "up"
         args:
           lb-type: concourse
+    - task: get-concourse-test-vars
+      file: ci/scripts/bosh-bootloader/get-concourse-test-vars/task.yml
+      params:
+        BBL_STATE_DIR: bbl-aws-concourse
+      input_mapping:
+        bbl-states: updated-env-repo
     - put: concourse-bosh-deployment
       params:
         source_file: test-bbl-state/bdr-source-file
@@ -1453,13 +1454,13 @@ jobs:
         stemcells: [ ubuntu-xenial-stemcell-gcp/stemcell.tgz ]
         vars_files:
           - concourse-deployment/versions.yml
-          - concourse-secrets/concourse-secrets.yml
-          - test-concourse-vars/test-concourse-vars.yml
+          - concourse-test-vars/vars.yml
         ops_files:
           - concourse-deployment/cluster/operations/privileged-https.yml
           - concourse-deployment/cluster/operations/privileged-http.yml
           - concourse-deployment/cluster/operations/basic-auth.yml
           - concourse-deployment/cluster/operations/tls.yml
+          - concourse-deployment/cluster/operations/tls-vars.yml
           - concourse-deployment/cluster/operations/web-network-extension.yml
     - task: curl-concourse
       image: cf-deployment-concourse-tasks-bbl-dev
@@ -1473,7 +1474,7 @@ jobs:
           path: bash
           args:
             - "-c"
-            - "curl -k https://$(bbl lbs --state-dir test-bbl-state/${BBL_STATE_DIR} | cut -d ':' -f 2 | tr -d ' ') | grep '<title>Concourse</title>'"
+            - "curl -k https://$(bbl lbs --state-dir bbl-state/${BBL_STATE_DIR} | awk -F': ' '{print $2}') | grep '<title>Concourse</title>'"
     - put: concourse-bosh-deployment
       params:
         source_file: test-bbl-state/bdr-source-file
@@ -1510,7 +1511,6 @@ jobs:
       passed: [bbl-downstream-docker-image]
       trigger: true
     - get: ubuntu-xenial-stemcell-aws
-    - get: test-concourse-vars
   - task: bbl-leftovers
     file: ci/scripts/bosh-bootloader/leftovers/task.yml
     image: cf-deployment-concourse-tasks-bbl-dev
@@ -2446,7 +2446,6 @@ jobs:
     - get: bbl-cli-dev-bump-deployments
       passed: [bbl-downstream-docker-image-bump-deployments]
     - get: ubuntu-xenial-stemcell-gcp
-    - get: test-concourse-vars
   - task: bbl-leftovers
     file: ci/scripts/bosh-bootloader/leftovers/task.yml
     image: cf-deployment-concourse-tasks-bbl-dev
@@ -2503,13 +2502,13 @@ jobs:
       stemcells: [ ubuntu-xenial-stemcell-gcp/stemcell.tgz ]
       vars_files:
         - concourse-deployment/versions.yml
-        - concourse-secrets/concourse-secrets.yml
-        - test-concourse-vars/test-concourse-vars.yml
+        - concourse-test-vars/vars.yml
       ops_files:
         - concourse-deployment/cluster/operations/privileged-https.yml
         - concourse-deployment/cluster/operations/privileged-http.yml
         - concourse-deployment/cluster/operations/basic-auth.yml
         - concourse-deployment/cluster/operations/tls.yml
+        - concourse-deployment/cluster/operations/tls-vars.yml
         - concourse-deployment/cluster/operations/web-network-extension.yml
   - task: curl-concourse
     image: cf-deployment-concourse-tasks-bbl-dev
@@ -2525,7 +2524,7 @@ jobs:
         path: bash
         args:
           - "-c"
-          - "curl -k https://$(bbl lbs --state-dir bbl-state/${BBL_STATE_DIR} | cut -d ':' -f 2 | tr -d ' ') | grep '<title>Concourse</title>'"
+          - "curl -k https://$(bbl lbs --state-dir bbl-state/${BBL_STATE_DIR} | awk -F': ' '{print $2}') | grep '<title>Concourse</title>'"
     ensure:
       do:
       - put: concourse-bosh-deployment
@@ -2575,7 +2574,6 @@ jobs:
     - get: bbl-cli-dev-bump-deployments
       passed: [bbl-downstream-docker-image-bump-deployments]
     - get: ubuntu-xenial-stemcell-azure
-    - get: test-concourse-vars
   - task: bbl-leftovers
     file: ci/scripts/bosh-bootloader/leftovers/task.yml
     image: cf-deployment-concourse-tasks-bbl-dev
@@ -2633,6 +2631,12 @@ jobs:
       BBL_STATE_DIR: bump-deployments/bbl-azure-concourse
     input_mapping:
       bbl-states: updated-env-repo
+  - task: get-concourse-test-vars
+    file: ci/scripts/bosh-bootloader/get-concourse-test-vars/task.yml
+    params:
+      BBL_STATE_DIR: bbl-aws-concourse
+    input_mapping:
+      bbl-states: updated-env-repo
   - put: concourse-bosh-deployment
     params:
       source_file: source-file/bosh-source.json
@@ -2640,13 +2644,13 @@ jobs:
       stemcells: [ ubuntu-xenial-stemcell-azure/stemcell.tgz ]
       vars_files:
         - concourse-deployment/versions.yml
-        - concourse-secrets/concourse-secrets.yml
-        - test-concourse-vars/test-concourse-vars.yml
+        - concourse-test-vars/vars.yml
       ops_files:
         - concourse-deployment/cluster/operations/privileged-https.yml
         - concourse-deployment/cluster/operations/privileged-http.yml
         - concourse-deployment/cluster/operations/basic-auth.yml
         - concourse-deployment/cluster/operations/tls.yml
+        - concourse-deployment/cluster/operations/tls-vars.yml
         - concourse-deployment/cluster/operations/web-network-extension.yml
   - task: curl-concourse
     image: cf-deployment-concourse-tasks-bbl-dev
@@ -2662,7 +2666,7 @@ jobs:
         path: bash
         args:
           - "-c"
-          - "curl -k https://$(bbl lbs --state-dir bbl-state/${BBL_STATE_DIR} | cut -d '(' -f 2 | tr -d ')') | grep '<title>Concourse</title>'"
+          - "curl -k https://$(bbl lbs --state-dir bbl-state/${BBL_STATE_DIR} | awk -F': ' '{print $2}') | grep '<title>Concourse</title>'"
     ensure:
       do:
       - put: concourse-bosh-deployment
@@ -2715,7 +2719,6 @@ jobs:
     - get: bbl-cli-dev-bump-deployments
       passed: [bbl-downstream-docker-image-bump-deployments]
     - get: ubuntu-xenial-stemcell-aws
-    - get: test-concourse-vars
   - task: bbl-leftovers
     file: ci/scripts/bosh-bootloader/leftovers/task.yml
     image: cf-deployment-concourse-tasks-bbl-dev
@@ -2766,6 +2769,12 @@ jobs:
       BBL_STATE_DIR: bump-deployments/bbl-aws-concourse
     input_mapping:
       bbl-states: updated-env-repo
+  - task: get-concourse-test-vars
+    file: ci/scripts/bosh-bootloader/get-concourse-test-vars/task.yml
+    params:
+      BBL_STATE_DIR: bbl-aws-concourse
+    input_mapping:
+      bbl-states: updated-env-repo
   - put: concourse-bosh-deployment
     params:
       source_file: source-file/bosh-source.json
@@ -2773,13 +2782,13 @@ jobs:
       stemcells: [ ubuntu-xenial-stemcell-aws/stemcell.tgz ]
       vars_files:
         - concourse-deployment/versions.yml
-        - concourse-secrets/concourse-secrets.yml
-        - test-concourse-vars/test-concourse-vars.yml
+        - concourse-test-vars/vars.yml
       ops_files:
         - concourse-deployment/cluster/operations/privileged-https.yml
         - concourse-deployment/cluster/operations/privileged-http.yml
         - concourse-deployment/cluster/operations/basic-auth.yml
         - concourse-deployment/cluster/operations/tls.yml
+        - concourse-deployment/cluster/operations/tls-vars.yml
         - concourse-deployment/cluster/operations/web-network-extension.yml
   - task: curl-concourse
     image: cf-deployment-concourse-tasks-bbl-dev
@@ -2795,7 +2804,7 @@ jobs:
         path: bash
         args:
           - "-c"
-          - "curl -k https://$(bbl lbs --state-dir bbl-state/${BBL_STATE_DIR} | cut -d '[' -f 2 | tr -d ']') | grep '<title>Concourse</title>'"
+          - "curl -k https://$(bbl lbs --state-dir bbl-state/${BBL_STATE_DIR} | awk -F': ' '{print $2}') | grep '<title>Concourse</title>'"
     ensure:
       do:
       - put: concourse-bosh-deployment
