add cf-deployment-concourse-tasks to bbl-up task
- to get shared functions

[#160598464]

--- a/scripts/bosh-bootloader/bbl-up-concourse/task.yml
+++ b/scripts/bosh-bootloader/bbl-up-concourse/task.yml
@@ -10,6 +10,7 @@ image_resource:
 inputs:
 - name: ci
 - name: bbl-state
+- name: cf-deployment-concourse-tasks
 
 outputs:
 - name: updated-bbl-state
