don't default to infra-ci for bbl states
[#160598464]

Signed-off-by: Josh Zarrabi <jzarrabi@pivotal.io>

--- a/scripts/bosh-bootloader/get-concourse-test-vars/task.yml
+++ b/scripts/bosh-bootloader/get-concourse-test-vars/task.yml
@@ -14,7 +14,7 @@ outputs:
 - name: concourse-test-vars
 
 params:
-  BBL_STATE_DIR: infra-ci
+  BBL_STATE_DIR:
 
 run:
   path: ci/scripts/bosh-bootloader/get-concourse-test-vars/task
