--- a/scripts/bosh-bootloader/get-concourse-test-vars/task.yml
+++ b/scripts/bosh-bootloader/get-concourse-test-vars/task.yml
@@ -14,7 +14,7 @@ outputs:
 - name: concourse-test-vars
 
 params:
-  BBL_STATE_DIR:
+  BBL_STATE_DIR: infra-ci
 
 run:
   path: ci/scripts/bosh-bootloader/get-concourse-test-vars/task
