--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -1260,6 +1260,8 @@ jobs:
       passed: [bbl-downstream-docker-image]
     - get: ci
       resource: infrastructure-ci
+    - get: vars-store
+      resource: infrastructure-ci-bbl-states
     - get: bbl-version
       resource: dev-version
       passed: [bbl-downstream-docker-image]
@@ -1473,6 +1475,8 @@ jobs:
       passed: [bbl-downstream-docker-image]
     - get: ci
       resource: infrastructure-ci
+    - get: vars-store
+      resource: infrastructure-ci-bbl-states
     - get: bbl-version
       resource: dev-version
       passed: [bbl-downstream-docker-image]
@@ -2399,6 +2403,8 @@ jobs:
       passed: [bbl-downstream-docker-image-bump-deployments]
     - get: ci
       resource: infrastructure-ci
+    - get: vars-store
+      resource: infrastructure-ci-bbl-states
     - get: bbl-version
       resource: version
       passed: [bbl-downstream-docker-image-bump-deployments]
@@ -2517,6 +2523,8 @@ jobs:
       passed: [bbl-downstream-docker-image-bump-deployments]
     - get: ci
       resource: infrastructure-ci
+    - get: vars-store
+      resource: infrastructure-ci-bbl-states
     - get: bbl-version
       resource: version
       passed: [bbl-downstream-docker-image-bump-deployments]
@@ -2652,6 +2660,8 @@ jobs:
       passed: [bbl-downstream-docker-image-bump-deployments]
     - get: ci
       resource: infrastructure-ci
+    - get: vars-store
+      resource: infrastructure-ci-bbl-states
     - get: bbl-version
       resource: version
       passed: [bbl-downstream-docker-image-bump-deployments]
