automatically update golang in golang docker image
[#160935264]

--- a/dockerfiles/golang/Dockerfile
+++ b/dockerfiles/golang/Dockerfile
@@ -1,12 +1,10 @@
 FROM cfinfrastructure/minimal
 MAINTAINER https://github.com/cloudfoundry/infrastructure-ci
 
-ENV GO_VERSION 1.10
-
 # Install go
-RUN wget https://storage.googleapis.com/golang/go${GO_VERSION}.linux-amd64.tar.gz && \
-  tar -C /usr/local -xzf go${GO_VERSION}.linux-amd64.tar.gz && \
-  rm -rf go${GO_VERSION}.linux-amd64.tar.gz
+ADD golang-linux /tmp/golang && \
+  tar -C /usr/local -xzf /tmp/golang/go*.linux-amd64.tar.gz && \
+  rm -rf /tmp/golang
 RUN chown -R testuser:testuser /usr/local/go/pkg
 
 # Create directory for GOPATH
