--- a/pipelines/dockerfiles.yml
+++ b/pipelines/dockerfiles.yml
@@ -127,6 +127,13 @@ resources:
     repository: bosh-cli
     access_token: ((cf_infra_bot_user_github_access_token))
 
+- name: golang-linux
+  type: s3
+  source:
+    endpoint: storage.googleapis.com
+    bucket: golang
+    regexp: 'go(1\.\d+(\.\d+)?)\.linux-amd64\.tar.gz'
+
 jobs:
 - name: minimal-docker-image
   public: true
@@ -187,6 +194,8 @@ jobs:
           skip_download: true
       - get: infrastructure-ci
         resource: golang-dockerfile
+        trigger: true
+      - get: golang-linux
         trigger: true
     - put: golang-docker-image
       params:
