put go-bindata in deployment image
[#160935264]

Signed-off-by: Josh Zarrabi <jzarrabi@pivotal.io>

--- a/dockerfiles/deployment/Dockerfile
+++ b/dockerfiles/deployment/Dockerfile
@@ -79,3 +79,5 @@ RUN curl -L "https://cli.run.pivotal.io/stable?release=linux64-binary&source=git
   mv cf /usr/local/bin/cf
 
 RUN go get -u github.com/pivotal-cf/texplate
+
+RUN go get -u github.com/jteeuwen/go-bindata/...
