--- a/pipelines/bbl-state-resource.yml
+++ b/pipelines/bbl-state-resource.yml
@@ -16,6 +16,11 @@ resource_types:
     repository: cfinfrastructure/bbl-state-resource
     tag: ci
 
+- name: bosh-deployment
+  type: docker-image
+  source:
+    repository: cloudfoundry/bosh-deployment-resource
+
 resources:
 - name: cf-deployment-concourse-tasks-bbl-dev
   type: docker-image
@@ -98,6 +103,7 @@ jobs:
   plan:
   - aggregate:
     - get: cf-deployment-concourse-tasks-bbl-dev
+    - get: bbl-state-resource-release-docker
     - get: bbl-state-resource-src
       trigger: true
       passed:
