--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -1170,7 +1170,7 @@ jobs:
   - task: create-bosh-source-file
     file: ci/scripts/bosh-bootloader/create-bosh-deployment-source-file/task.yml
     params:
-      BBL_STATE_DIR: bump-deployments/bbl-gcp-concourse
+      BBL_STATE_DIR: bbl-gcp-concourse
     input_mapping:
       bbl-states: updated-bbl-state
   - task: get-concourse-test-vars
@@ -1200,6 +1200,8 @@ jobs:
       platform: linux
       inputs:
       - name: bbl-states
+      params:
+        BBL_STATE_DIR: bbl-gcp-concourse
       run:
         path: bash
         args:
