Add vSphere Subnet CIDR param to terraforming-vsphere
[#159109058](https://www.pivotaltracker.com/story/show/159109058)
* added credhub variable "terraforming_vsphere_subnet_cidr"
  repo name added for namespacing. BBL seems to have different
  value for a subnet.

Co-authored-by: Christopher Hunter <hunter.christopher@icloud.com>

--- a/pipelines/terraforming.yml
+++ b/pipelines/terraforming.yml
@@ -45,6 +45,7 @@ jobs:
     tags: [khaleesi]
     params:
       VSPHERE_NETWORK: ((vsphere_network_name))
+      VSPHERE_SUBNET_CIDR: ((terraforming_vsphere_subnet_cidr))
       VSPHERE_OM_IP: ((vsphere_om_ip))
       VSPHERE_OM_DNS: ((vsphere_om_dns))
       VSPHERE_OM_NTP: ((vsphere_om_ntp))
