--- a/scripts/infrastructure-ci/bbl-up-concourse-bosh-director/task-vsphere.yml
+++ b/scripts/infrastructure-ci/bbl-up-concourse-bosh-director/task-vsphere.yml
@@ -22,4 +22,4 @@ params:
   BBL_VSPHERE_VCENTER_RP:
   BBL_VSPHERE_NETWORK:
   BBL_VSPHERE_VCENTER_DS:
-  BBL_VSPHERE_SUBNET:
+  BBL_VSPHERE_SUBNET_CIDR:
