--- a/scripts/common/manage-gcp-dns/task.yml
+++ b/scripts/common/manage-gcp-dns/task.yml
@@ -19,6 +19,7 @@ params:
   GCP_DNS_RECORD_SET_NAME:
   GCP_DNS_RECORD_TTL: 300
   ACTION:
+  CHECK_DNS: false
 
 run:
   path: ci/scripts/common/manage-gcp-dns/task
